<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/user_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="@dimen/tweet_icon_size"
            android:layout_height="@dimen/tweet_icon_size"
            android:layout_marginStart="@dimen/tweet_large_margin"
            android:layout_marginEnd="@dimen/tweet_large_margin"
            android:layout_marginTop="@dimen/tweet_primary_margin"
            android:layout_marginBottom="@dimen/tweet_primary_margin"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tweet_primary_font_size"
            android:layout_marginEnd="@dimen/tweet_primary_margin"
            android:text="@string/trending_list_title_team"/>

        <TextView
            android:id="@+id/user_id"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tweet_detail_font_size"
            android:layout_marginEnd="@dimen/tweet_primary_margin"
            android:text="@string/trending_list_title_team"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/activity_action_switch_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_info_layout"
        android:gravity="center"
        android:layout_marginTop="@dimen/tweet_large_margin"
        android:layout_marginBottom="@dimen/tweet_large_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tweets_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/tweet_large_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/tweeter_switcher_bg_selected"
            android:textSize="@dimen/tweet_secondary_font_size"
            android:text="@string/tweet_screen_tweets_by"/>

        <TextView
            android:id="@+id/tweets_on"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/tweet_large_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/tweeter_switcher_right_bg_unselected"
            android:textSize="@dimen/tweet_secondary_font_size"
            android:text="@string/tweet_screen_tweets_on"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/activity_interval_tab"
        android:layout_below="@id/activity_action_switch_layout"
        android:layout_above="@+id/tweet_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/activity_graph_layout"
        android:layout_below="@id/activity_interval_tab"
        android:layout_above="@+id/tweet_category_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_margin="10dp"
            android:elevation="3dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.jjoe64.graphview.GraphView
                android:id="@+id/activity_graph"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.v7.widget.CardView>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/tweet_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageButton
            android:id="@+id/activity_nav_prev"
            android:layout_width="@dimen/tweet_nav_btn_size"
            android:layout_height="@dimen/tweet_nav_btn_size"
            android:layout_margin="@dimen/tweet_secondary_margin"
            android:src="@android:drawable/ic_media_previous"/>

        <TextView
            android:id="@+id/activity_nav_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/tweet_secondary_margin"
            android:textSize="@dimen/tweet_nav_text_size"/>

        <ImageButton
            android:id="@+id/activity_nav_next"
            android:layout_width="@dimen/tweet_nav_btn_size"
            android:layout_height="@dimen/tweet_nav_btn_size"
            android:layout_margin="@dimen/tweet_secondary_margin"
            android:src="@android:drawable/ic_media_next"/>
    </LinearLayout>

</RelativeLayout>